# julia-fractal-renderer

./: .gitignore  Cargo.toml  Makefile  README.md
src/: generate.rs  main.rs
