[package]
name = "julia-fractal-renderer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
image = { version = "0.24.6", default-features = false, features = ["png"] }
native-dialog = "0.6.4"
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
